# agentic-payment-merchant

./: .env.example  .gitignore  README.md
adapter/: config.py  main.py  requirements.txt
adapter/mcp/: server.py
adapter/routes/: discovery.py  ucp.py
adapter/services/: heg_client.py  registry.py  ucp_service.py  ucp_store.py
agent-skill/: README.md  install-qclaw-skill.sh  sync-heg-flight-skill.sh
agent-skill/clawhub/: publish.env.example  publish.sh
agent-skill/openclaw/: README.md  SKILL.md  (+3 more)
docs/: RUNBOOK.md
merchant-management/backend/: .env.example  config.py  main.py  pyproject.toml  requirements.txt
merchant-management/backend/api/: admin.py  registry.py
merchant-management/backend/core/: database.py
merchant-management/backend/database/flyway/: migrate.sh
merchant-management/backend/database/flyway/migrations/: V1__initial_schema.sql  V2__operations_console.sql  V3__capability_schema_defaults.sql  V4__jwks_absolute_urls.sql
merchant-management/backend/services/: audit_service.py  capability_defaults.py  capability_service.py  certificate_service.py  common.py  export_service.py  merchant_service.py  onboarding_service.py  platform_urls.py  reconciliation_service.py  transaction_service.py  trust_service.py
payment-stack/: constants_unified.py  http_mcp_launcher.py  item_display_unified.py  path_setup.py  role_logging.py  run.sh  start.sh  stop.sh
scripts/: dev-common.sh  smoke-test.sh  start-adapter.sh  start-all.sh  stop-all.sh  test-ucp-ap2-bridge.sh
web-chat-client/: index.html  package-lock.json  package.json  vite.config.ts
(+208 files in other folders)
