[project]
name = "merchant-management-backend"
version = "0.1.0"
description = "Merchant Management Platform API"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "aiomysql>=0.2.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
